Update CI/CD workflows and README: Change build command for CI environment and document new build script

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm run test:ci
 
       - name: Build project
-        run: npm run build
+        run: npm run build:ci
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
