--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,7 +6,7 @@ on:
     branches: [main, master, develop]
 
 jobs:
-  code-quality:
+  test-build:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,21 +23,6 @@ jobs:
 
       - name: Run linting
         run: npm run lint
-
-  test-coverage:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Use Node.js 18.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.x
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm i
 
       - name: Run tests with coverage
         run: npm run test:ci
