--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: npm i
 
+      - name: get version of steelheart-ai
+        run: echo "STEELHEART_AI_VERSION=$(npm show steelheart-ai version)" >> $GITHUB_ENV
+
       - name: Run linting
         run: npm run lint
 
