--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,6 +18,24 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Git user configuration
+        run: |
+          # Check if git-config.env file exists and source it
+          if [ -f "git-config.env" ]; then
+            echo "Loading Git configuration from git-config.env"
+            source git-config.env
+          else
+            echo "git-config.env not found, using defaults"
+            export GIT_USER_EMAIL="${{ github.actor }}@users.noreply.github.com"
+            export GIT_USER_NAME="${{ github.actor }}"
+          fi
+
+          # Set environment variables for subsequent steps
+          echo "GIT_USER_EMAIL=$GIT_USER_EMAIL" >> $GITHUB_ENV
+          echo "GIT_USER_NAME=$GIT_USER_NAME" >> $GITHUB_ENV
+
+          echo "Git user configured as: $GIT_USER_NAME <$GIT_USER_EMAIL>"
+
       - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
@@ -31,6 +49,19 @@ jobs:
         run: |
           chmod +x setup_steelheart.sh
           ./setup_steelheart.sh
+
+      - name: Commit Steelheart AI output
+        run: |
+          git config --local user.email "$GIT_USER_EMAIL"
+          git config --local user.name "$GIT_USER_NAME"
+          git add steelheart-output/
+          git add .
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: add Steelheart AI analysis output [skip ci]"
+            git push origin HEAD
+          fi
 
       - name: Run linting
         run: npm run lint
