--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -56,6 +56,8 @@ jobs:
           git config --local user.name "$GIT_USER_NAME"
           git add steelheart-output/
           git add .
+          # Exclude .steelheart.json from commit
+          git reset HEAD .steelheart.json 2>/dev/null || true
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
