--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -5,6 +5,10 @@ on:
     types: [opened, synchronize, reopened]
     branches: [main, master, develop]
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   test-build:
     runs-on: ubuntu-latest
@@ -17,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.PAT_TOKEN }}
 
       - name: Setup Git user configuration
         run: |
